package com.nvh12.log_processing.domain.model;

public record ValidationLimits(int maxIpLength, int maxUrlLength, int maxUaLength) {}
